[tool.poetry]
name = "keylib-py"
version = "0.1.0"
description = ""
authors = ["Daniel Luque Quintana <dranko91@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
ecdsa = "^0.16.1"
utilitybelt = "^0.2.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
